--- a/Components/02-Buttons/index.html
+++ b/Components/02-Buttons/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buttons</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
 
@@ -18,11 +19,15 @@
 
     <!-- Links -->
     <div>
-        <a href="#" class="btn-link btn-link-primary">Link Button</a>
-        <a href="#" class="btn-link btn-link-success">Link Button</a>
-        <a href="#" class="btn-link btn-link-danger">Link Button</a>
-        <a href="#" class="btn-link btn-link-warning">Link Button</a>
+        <a href="#" class="btn-link btn-link-primary">Primary Button</a>
+        <a href="#" class="btn-link btn-link-success">Success Button</a>
+        <a href="#" class="btn-link btn-link-danger">Danger Button</a>
+        <a href="#" class="btn-link btn-link-warning">Warnings Button</a>
     </div>
-    
+
+    <!-- Download Button -->
+    <div>
+        <button class="btn-download"><i class="fa fa-download" aria-hidden="true"></i> Download</button>
+    </div>
 </body>
 </html>
